--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="caixa-maior">
       <input class="input-cidade" placeholder="Digite o nome da cidade" />
       <button onclick="cliqueiNoBotao()">
-        <img class="lupa" src="" />
+        <img class="lupa" src="https://www.svgrepo.com/show/488200/find.svg" />
       </button>
 
       <div class="caixa-media">
@@ -34,7 +34,7 @@
           <p class="umidade">0%</p>
         </div>
         <div class="caixa-menor">
-          <img class="icone" src="" />
+          <img class="icone" src="https://openweathermap.org/img/wn/04n.png" />
 
           <p class="descricao">Indefinida</p>
         </div>
