--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
 
   <body>
     <div class="caixa-maior">
-      <input class="input-cidade" placeholder="Digite o nome da cidade" />
-      <button onclick="cliqueiNoBotao()">
-        <img class="lupa" src="https://www.svgrepo.com/show/488200/find.svg" />
-      </button>
+      <div class="barra">
+        <input class="input-cidade" placeholder="Digite o nome da cidade" />
+        <button onclick="cliqueiNoBotao()">
+          <img
+            class="lupa"
+            src="https://www.svgrepo.com/show/488200/find.svg"
+          />
+        </button>
+      </div>
 
       <div class="caixa-media">
         <h2 class="cidade">Tempo em Rio de Janeiro</h2>
